Modified style and fixed scroll to end
Appending new line at the end of the editor exiting out of view.
Fixed with scroll top property of the editor.

--- a/client/src/app/editor/editor.component.css
+++ b/client/src/app/editor/editor.component.css
@@ -1,6 +1,11 @@
+* {
+    max-width: 100%;
+}
+
 .editor {
     padding: 0.5rem 0.8rem;
-    height: fit-content;
+    height: 100%;
+    min-height: fit-content;
     width: 100%;
     background-color: var(--editor-background);
     border: none;
@@ -21,13 +26,15 @@
 }
 
 .editor-container {
+    position: relative;
     background-color: var(--editor-background);
     display: flex;
     flex-direction: row;
     flex: auto;
     width: 100%;
-    height: 100%;
-    cursor: text;
+    min-height: fit-content;
+    max-height: 100%;
+    overflow: auto;
 }
 
 .line-number {
