--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -67,6 +67,10 @@ a:visited {
   background: rgba(0, 0, 0, 0.4); 
 }
 
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0.05); 
+}
+
 html, body { 
   height: 100%;
   background-color: var(--site-background);
